@@ -14,6 +14,7 @@ Version 3.1.0 (v3.1.0 RTM)
 		 overloads that accept a list of collections.
 		-[Core] Check added to InstanceProducer constructor to prevent incompatible Registration objects 
 		 from being supplied. (fixes #52)
+		-[Core] Exception message improved in case batch-registration skipped decorator. (fixes #13)
 
 
 Version 3.0.5 (v3.0.5 RTM) 2015-09-03
